@@ -71,9 +71,9 @@ AttachSourceEditor.name= Attach Source Editor
 CDebugEditor.name= C/C++ Debug Editor
 
 LoadSymbolsAction.label=Load Symbols
-LoadSymbolsAction.tooltip=Load Shared Library's Symbols
+LoadSymbolsAction.tooltip=Load Modules's Symbols
 LoadSymbolsForAllAction.label=Load Symbols For All
-LoadSymbolsForAllAction.tooltip=Load Symbols For All Shared Libraries
+LoadSymbolsForAllAction.tooltip=Load Symbols For All Modules
 
 SignalAction.label=Resume With Signal
 SignalAction.tooltip=Resume With Signal
